--- a/index.html
+++ b/index.html
@@ -29,41 +29,13 @@
 
     </nav>
 
-    <div id = 'container'>
-        <div class ='html-container'>
-          <span>HTML</span>
-          <div id='input-html-container'>
-          <textarea id ='html-panel' class='input html' type="text"></textarea>
-        </div>
-        </div>
-
-        <div class ='css-container'>
-          <span>CSS</span>
-          <div id='input-css-container'>
-          <textarea id ='css-panel' class='input css' type="text"></textarea>
-        </div>
-        </div>
-
-        <div class ='js-container'>
-          <span>JavaScript</span>
-          <div id='input-js-container'>
-          <textarea id ='js-panel' class='input js' type="text"></textarea>
-        </div>
-        </div>
-
-        <div class='output-container'>
-          <span>Output</span>
-          <iframe id='output' class='panel' >
-          </iframe>
-        </div>
-
-
-    </div>
-
+    
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jshint/2.11.0/jshint.js"></script>
     <script src="jquery.tabComplete.js"></script>
-    <script src='./src/js/codePlayer.js ></script>
+    <script src='./src/js/codePlayer.js'></script>
 </body>
 </html>
