--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="/codePlayer.html">CodePlayer</a>
+          <a href="./codePlayer.html">CodePlayer</a>
           <a href="#">About Us</a>
           <a href="#">Donate</a>
         </div>
